--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         module: ['pkg', 'cmd', 'gui']
@@ -31,6 +31,16 @@ jobs:
       - name: Get dependencies
         working-directory: ${{ matrix.module }}
         run: go get -v -t -d ./...
+
+      - name: Install fyne dependency packages
+        if: ${{ matrix.module == 'gui' }}
+        run: >
+          sudo apt-get install -y -qq &&
+          sudo apt-get install -y -qq
+          libgl1-mesa-dev
+          libegl1-mesa-dev
+          libgles2-mesa-dev
+          xorg-dev
 
       - name: Test
         working-directory: ${{ matrix.module }}
