--- a/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
+++ b/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
@@ -3,4 +3,14 @@ kind: SecretGenerator
 
 metadata:
   name: whatever
-argsOneLiner: Welcome '"true"'
+
+# General configuration of the vault:
+situVault:
+  # The location of the password, either from the environment or a file:
+  password:
+    env: SITU_VAULT_PASSWORD
+    file: ./../env/password-prod.vault.key
+
+# The Kubernetes manifests containing the secrets to decrypt:
+files:
+  - ./secret-one.enc.yaml
