Add fyne-cross to github pipeline

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        module: ['pkg', 'cmd', 'gui']
+        module: [ 'pkg', 'cmd', 'gui' ]
 
     steps:
 
@@ -45,3 +45,27 @@ jobs:
       - name: Test
         working-directory: ${{ matrix.module }}
         run: go test -v ./...
+
+      - name: Setup fyne-cross
+        working-directory: build
+        if: ${{ matrix.module == 'gui' }}
+        run: |
+          go mod download
+          go install github.com/fyne-io/fyne-cross
+
+      - name: Build fyne GUI
+        working-directory: ${{ matrix.module }}
+        if: ${{ matrix.module == 'gui' }}
+        run: |
+          go mod vendor
+          fyne-cross linux   -arch=amd64,arm64,386 -output=situ-vault-gui ./situ-vault
+          fyne-cross darwin  -arch=amd64           -output=situ-vault-gui ./situ-vault
+          fyne-cross windows -arch=amd64           -output=situ-vault-gui ./situ-vault
+
+      - name: Upload GUI dist
+        uses: actions/upload-artifact@v2
+        if: ${{ matrix.module == 'gui' }}
+        with:
+          name: dist-gui
+          path: gui/fyne-cross/dist/ # or path/to/artifact
+          retention-days: 1
