Add example certificate to kustomize plugin testdata

--- a/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
+++ b/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
@@ -14,3 +14,4 @@ situVault:
 # The Kubernetes manifests containing the secrets to decrypt:
 files:
   - ./secret-one.enc.yaml
+  - ./secret-tls.enc.yaml
