Add ending to vaultmessage

--- a/cmd/situ-vault-kustomize/testdata/example/secret-one.enc.yaml
+++ b/cmd/situ-vault-kustomize/testdata/example/secret-one.enc.yaml
@@ -19,6 +19,6 @@ stringData:
 # "data" finally contains secrets Base64 encoded.
 # Note: Only these 'data' values are treated as vaulted secrets and are decrypted by the plugin!
 data:
-  username: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##TNSIVLVV6EOGI===##GRDENILPW24R4YDA2I6MKT6JPLG5GM2HWC5S2PR7
-  password: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##TCHHO4DN33TGE===##E6MGPZHIF4BKSWARCXN4HD7ZRCA7O6DSPCUUTW43SIAYX5RVOBGA====
-  risky_flag: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##FWEPX65OJVCEE===##QD226ZVYYQHYFNPRPYAZZZTBTHT2JL2M
+  username: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##TNSIVLVV6EOGI===##GRDENILPW24R4YDA2I6MKT6JPLG5GM2HWC5S2PR7##END
+  password: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##TCHHO4DN33TGE===##E6MGPZHIF4BKSWARCXN4HD7ZRCA7O6DSPCUUTW43SIAYX5RVOBGA====##END
+  risky_flag: SITU_VAULT_V1##C:AES256_GCM#KDF:PBKDF2_SHA256_I10K#SALT:R8B#ENC:BASE32##FWEPX65OJVCEE===##QD226ZVYYQHYFNPRPYAZZZTBTHT2JL2M##END
