Implement password from file source in kustomize plugin

--- a/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
+++ b/cmd/situ-vault-kustomize/testdata/example/secrets.yaml
@@ -6,10 +6,12 @@ metadata:
 
 # General configuration of the vault:
 situVault:
-  # The location of the password, either from the environment or a file:
+  # The location of the password, either from the environment or a file.
+  # First environment is checked and if env variable is not defined, then file is used as fallback.
+  # Env can directly contain the password but may also point to a file too.
   password:
     env: SITU_VAULT_PASSWORD
-    file: ./../env/password-prod.vault.key
+    file: file://./../env/password.vault.key
 
 # The Kubernetes manifests containing the secrets to decrypt:
 files:
