--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 env:
-  GO_VERSION: '1.15.6'
+  GO_VERSION: '1.16.0-rc1'
 
 jobs:
 
@@ -14,13 +14,15 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
+        go: ['1.15.x', 'common']
         module: [ 'pkg', 'cmd', 'gui' ]
     steps:
 
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ matrix.go != 'common' && matrix.go || env.GO_VERSION }}
+          stable: ${{ !contains(matrix.go, 'rc') && !(matrix.go == 'common' && contains(env.GO_VERSION, 'rc')) }}
 
       - name: Check out code
         uses: actions/checkout@v2
@@ -62,6 +64,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ env.GO_VERSION }}
+          stable: ${{ !contains(env.GO_VERSION, 'rc') }}
 
       - name: Check out code
         uses: actions/checkout@v2
@@ -109,6 +112,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ env.GO_VERSION }}
+          stable: ${{ !contains(env.GO_VERSION, 'rc') }}
 
       - name: Check out code
         uses: actions/checkout@v2
