--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        go: ['1.15.x', 'common']
+        go: ['1.14.x', '1.15.x', 'common']
         module: [ 'pkg', 'cmd', 'gui' ]
     steps:
 
