--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 
 env:
-  GO_VERSION: '1.16.x'
+  GO_VERSION: '1.17.x'
 
 jobs:
 
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        go: ['1.14.x', '1.15.x', 'common']
+        go: ['1.14.x', '1.15.x', '1.16.x', 'common']
         module: [ 'pkg', 'cmd', 'gui' ]
     steps:
 
