--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install linters
         run: |
           go install golang.org/x/tools/cmd/goimports@latest
-          go install honnef.co/go/tools/cmd/staticcheck@v0.2.1
+          go install honnef.co/go/tools/cmd/staticcheck@2022.1.3
 
       - name: Install fyne dependency packages
         if: ${{ matrix.module == 'gui' }}
