--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,10 +17,14 @@ jobs:
         module: [ 'pkg', 'cmd', 'gui' ]
     steps:
 
+      - name: Check out code
+        uses: actions/checkout@v4
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+          cache-dependency-path: ${{ matrix.module }}/go.sum
 
       - name: Install linters
         run: |
@@ -36,9 +40,6 @@ jobs:
           libegl1-mesa-dev
           libgles2-mesa-dev
           xorg-dev
-
-      - name: Check out code
-        uses: actions/checkout@v4
 
       - name: Vet
         working-directory: ${{ matrix.module }}
